force-app/main/default/objects/Lead/fields/AC_rtName__c.field-meta.xml
<CustomField>
    <fullName>AC_rtName__c</fullName>
    <formula>BLANKVALUE(RecordType.Name,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Record Type Name</label>
    <type>Text</type>
</CustomField>