force-app/main/default/objects/Lead/fields/accident_location__c.field-meta.xml
<CustomField>
    <fullName>accident_location__c</fullName>
    <label>Accident Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>