force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>&quot;Account # 1&quot;</defaultValue>
    <label>Account #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account # 1</fullName>
                <default>true</default>
                <label>Account # 1</label>
            </value>
            <value>
                <fullName>Account # 2</fullName>
            </value>
            <value>
                <fullName>Account # 3</fullName>
            </value>
            <value>
                <fullName>Account # 4</fullName>
            </value>
            <value>
                <fullName>Account # 5</fullName>
            </value>
            <value>
                <fullName>Account # 6</fullName>
            </value>
            <value>
                <fullName>Account # 7</fullName>
            </value>
            <value>
                <fullName>Account # 8</fullName>
            </value>
            <value>
                <fullName>Account # 9</fullName>
            </value>
            <value>
                <fullName>Account # 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>