force-app/main/default/objects/Lead/fields/Act_Sale_by_Month_Report_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_Sale_by_Month_Report_Start_Date__c</fullName>
    <formula>TEXT( YEAR( $Setup.Actual_Sales_by_Month_Report__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.Actual_Sales_by_Month_Report__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.Actual_Sales_by_Month_Report__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.Actual_Sales_by_Month_Report__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.Actual_Sales_by_Month_Report__c.Start_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act Sale by Month Report Start Date</label>
    <type>Text</type>
</CustomField>