force-app/main/default/objects/Lead/fields/Additional_Details_Info_of_the_file__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_Info_of_the_file__c</fullName>
    <label>Additional Details / Info of the file</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>