force-app/main/default/objects/Lead/fields/Additional_Income__c.field-meta.xml
<CustomField>
    <fullName>Additional_Income__c</fullName>
    <label>Additional Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>