force-app/main/default/objects/Lead/fields/Any_SpousalChild_support_payment__c.field-meta.xml
<CustomField>
    <fullName>Any_SpousalChild_support_payment__c</fullName>
    <label>Any SpousalChild support payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>