force-app/main/default/objects/Lead/fields/Collateral_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Benefits__c</fullName>
    <label>Collateral Benefits( If Yes,how much? )</label>
    <length>255</length>
    <type>Text</type>
</CustomField>