force-app/main/default/objects/Lead/fields/Conga_Actual_Sale_By_Month_Rpt_View_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Actual_Sale_By_Month_Rpt_View_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;&amp;
&quot;&amp;serverUrl=API.Partner_Server_URL_370&quot;&amp;
&quot;&amp;Id=&quot;&amp; Id &amp;

&quot;&amp;QueryId=&quot;&amp;
&quot;[AllLeads]a0p19000002P2Vb%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; $Setup.Actual_Sales_by_Month_Report__c.Business_Unit__c &amp;
&quot;~pv1%3D&quot;&amp; Act_Sale_by_Month_Report_Start_Date__c &amp;
&quot;~pv2%3D&quot;&amp; Act_Sale_by_Month_Report_End_Date__c &amp;

&quot;,[ConvertedLeads]a0p19000002P2Vg%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; $Setup.Actual_Sales_by_Month_Report__c.Business_Unit__c &amp;
&quot;~pv1%3D&quot;&amp; Act_Sale_by_Month_Report_Start_Date__c &amp;
&quot;~pv2%3D&quot;&amp; Act_Sale_by_Month_Report_End_Date__c &amp;

&quot;,[drawdowns]a0p19000002P2Vv%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; $Setup.Actual_Sales_by_Month_Report__c.Business_Unit__c &amp;
&quot;~pv1%3D&quot;&amp; Act_Sale_by_Month_Report_Start_Date__c &amp;
&quot;~pv2%3D&quot;&amp; Act_Sale_by_Month_Report_End_Date__c &amp;

&quot;&amp;TemplateId=a0x190000013s3P,a0x190000013tTl,a0x190000013tTq&quot;&amp;

&quot;&amp;OFN={Template.Label}&quot;&amp;
&quot;&amp;APDF=1&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Actual Sale By Month Rpt View All</label>
    <type>Text</type>
</CustomField>