force-app/main/default/objects/Lead/fields/Current_Tx__c.field-meta.xml
<CustomField>
    <fullName>Current_Tx__c</fullName>
    <label>Current Tx</label>
    <type>TextArea</type>
</CustomField>