force-app/main/default/objects/Lead/fields/Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>Date_Applied__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Applied</label>
    <type>Date</type>
</CustomField>