force-app/main/default/objects/Lead/fields/Date_of_Accident_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accident_Incident__c</fullName>
    <label>Date of Accident / Incident</label>
    <type>Date</type>
</CustomField>