force-app/main/default/objects/Lead/fields/Date_of_the_Accident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_Accident__c</fullName>
    <label>Date of the Accident</label>
    <type>Date</type>
</CustomField>