force-app/main/default/objects/Lead/fields/Driver_s_Licence_No__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Licence_No__c</fullName>
    <label>Driver&#39;s Licence No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>