force-app/main/default/objects/Lead/fields/Existing_Litigation_Loans__c.field-meta.xml
<CustomField>
    <fullName>Existing_Litigation_Loans__c</fullName>
    <label>Existing Litigation Loans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>