force-app/main/default/objects/Lead/fields/First_Party_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>First_Party_Insurance_Company__c</fullName>
    <label>First Party Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>