force-app/main/default/objects/Lead/fields/Have_you_ever_been_in_arrears_on_payment__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_been_in_arrears_on_payment__c</fullName>
    <label>Have you ever been in arrears on payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>