force-app/main/default/objects/Lead/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Business Bureau Website</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Google/Bing Search</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>MoneySaver</fullName>
            </value>
            <value>
                <fullName>Shoppers Source</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>