force-app/main/default/objects/Lead/fields/How_did_you_hear_about_us_desc__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us_desc__c</fullName>
    <label>How did you hear about us(desc):</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>