force-app/main/default/objects/Lead/fields/If_represented_by_a_Paralegal__c.field-meta.xml
<CustomField>
    <fullName>If_represented_by_a_Paralegal__c</fullName>
    <label>If represented by a Paralegal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>