force-app/main/default/objects/Lead/fields/If_Yes_please_provide_details__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_please_provide_details__c</fullName>
    <label>If Yes , please provide details</label>
    <type>TextArea</type>
</CustomField>