force-app/main/default/objects/Lead/fields/If_yes_to_the_above_question_how_many__c.field-meta.xml
<CustomField>
    <fullName>If_yes_to_the_above_question_how_many__c</fullName>
    <label>If yes to the above question, how many?</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>