force-app/main/default/objects/Lead/fields/Law_Email__c.field-meta.xml
<CustomField>
    <fullName>Law_Email__c</fullName>
    <formula>Lawyer_Name_new__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Email</label>
    <type>Text</type>
</CustomField>