force-app/main/default/objects/Lead/fields/Law_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Name__c</fullName>
    <label>Law Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>