force-app/main/default/objects/Lead/fields/Law_Firm_Name_new__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Name_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>