force-app/main/default/objects/Lead/fields/Law_Phone__c.field-meta.xml
<CustomField>
    <fullName>Law_Phone__c</fullName>
    <formula>Lawyer_Name_new__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Phone</label>
    <type>Text</type>
</CustomField>