force-app/main/default/objects/Lead/fields/Lawyer_City__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_City__c</fullName>
    <label>Lawyer City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>