force-app/main/default/objects/Lead/fields/Lawyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Email__c</fullName>
    <label>Lawyer Email</label>
    <type>Email</type>
</CustomField>