force-app/main/default/objects/Lead/fields/Lawyer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Fax__c</fullName>
    <label>Lawyer Fax</label>
    <type>Phone</type>
</CustomField>