force-app/main/default/objects/Lead/fields/Lawyer_Name_new__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>