force-app/main/default/objects/Lead/fields/Lawyer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Phone__c</fullName>
    <label>Lawyer Phone</label>
    <type>Phone</type>
</CustomField>