force-app/main/default/objects/Lead/fields/Lawyer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Postal_Code__c</fullName>
    <label>Lawyer Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>