force-app/main/default/objects/Lead/fields/Lawyer_State__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_State__c</fullName>
    <label>Lawyer State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>