force-app/main/default/objects/Lead/fields/Lawyer_Street__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Street__c</fullName>
    <label>Lawyer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>