force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <description>Formula to calculate the lead age in days.</description>
    <formula>IF(
IsConverted = False
, TODAY() - DATEVALUE(CreatedDate)
, ConvertedDate - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>