force-app/main/default/objects/Lead/fields/Name_of_Lender__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lender__c</fullName>
    <label>Name of Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>