force-app/main/default/objects/Lead/fields/Please_identify_any_other_layer_law__c.field-meta.xml
<CustomField>
    <fullName>Please_identify_any_other_layer_law__c</fullName>
    <label>Please identify any other layer / law</label>
    <length>255</length>
    <type>Text</type>
</CustomField>