force-app/main/default/objects/Lead/fields/Prior_Employment__c.field-meta.xml
<CustomField>
    <fullName>Prior_Employment__c</fullName>
    <label>Prior Employment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>