force-app/main/default/objects/Lead/fields/Prior_Injury__c.field-meta.xml
<CustomField>
    <fullName>Prior_Injury__c</fullName>
    <label>Prior Injury</label>
    <type>TextArea</type>
</CustomField>