force-app/main/default/objects/Lead/fields/Province_of_Driver_s_Licence__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Driver_s_Licence__c</fullName>
    <label>Province of Driver&#39;s Licence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>