force-app/main/default/objects/Lead/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>