force-app/main/default/objects/Lead/fields/Send__c.field-meta.xml
<CustomField>
    <fullName>Send__c</fullName>
    <label>Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>