force-app/main/default/objects/Lead/fields/Third_Party_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Insurance_Company__c</fullName>
    <label>Third Party Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>