force-app/main/default/objects/Lead/fields/Web_To_Lead_From__c.field-meta.xml
<CustomField>
    <fullName>Web_To_Lead_From__c</fullName>
    <label>Web To Lead From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Form</fullName>
            </value>
            <value>
                <fullName>Get Help Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>