force-app/main/default/objects/Lead/fields/what_happened__c.field-meta.xml
<CustomField>
    <fullName>what_happened__c</fullName>
    <label>What Happened</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>