force-app/main/default/objects/Lead/fields/wtn__FacebookUrl__c.field-meta.xml
<CustomField>
    <fullName>wtn__FacebookUrl__c</fullName>
    <label>Url Facebook</label>
    <type>Url</type>
</CustomField>