force-app/main/default/objects/Lead/fields/wtn__HtmlContent__c.field-meta.xml
<CustomField>
    <fullName>wtn__HtmlContent__c</fullName>
    <label>Signature HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>