force-app/main/default/objects/Lead/fields/wtn__KwagaMailId__c.field-meta.xml
<CustomField>
    <fullName>wtn__KwagaMailId__c</fullName>
    <label>KwagaMailId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>