force-app/main/default/objects/Lead/fields/wtn__LastKwagaUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>wtn__LastKwagaUpdateDate__c</fullName>
    <label>LastKwagaUpdateDate</label>
    <type>DateTime</type>
</CustomField>