force-app/main/default/objects/Lead/fields/wtn__Skype__c.field-meta.xml
<CustomField>
    <fullName>wtn__Skype__c</fullName>
    <label>Skype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>