force-app/main/default/objects/Lead/fields/wtn__testwtn__c.field-meta.xml
<CustomField>
    <fullName>wtn__testwtn__c</fullName>
    <label>testwtn</label>
    <length>100</length>
    <type>Text</type>
</CustomField>