force-app/main/default/objects/Lead/recordTypes/Customer_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Customer_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Customer Lead Process</businessProcess>
    <description>Use this record type to track customer leads</description>
    <label>Customer Record Type</label>
</RecordType>